--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
+  "name": "codex-server",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
-   "server": "nodemon server"
+    "server": "nodemon server"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
